Added ChatWindow and some endpoints to make user handling work and also implemented the frontend for for the logic

--- a/chat-frontend/scss/main.scss
+++ b/chat-frontend/scss/main.scss
@@ -4,3 +4,27 @@ body{
   font-family: 'Roboto Mono', monospace;
   background: lightgray;
 }
+
+
+.messageOther {
+  display: block;
+  margin-right: auto;
+  background: rgb(194, 191, 196) !important;
+  padding: 15px;
+  border-radius: 15px;
+  max-width: fit-content;
+}
+
+.messageMine {
+  display: block;
+  margin-left: auto;
+  background: rgb(95, 145, 255) !important;
+  padding: 15px;
+  border-radius: 15px;
+  max-width: fit-content;
+}
+
+.chatsDiv{
+  max-height:  60vh;
+  overflow: scroll;
+}
